discussion/kv_engine/177109/177109_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52675: Add PagingVisitor benchmark

Add a benchmark for the PagingVisitor which measures how long
it takes to "visit" a vBucket. This measures how long it takes to
page out the required amount of items (memory) from the vBucket.
The benchmarks also logs the number of evicted items.

$ time ./ep_engine_benchmarks --benchmark_filter=PagingVisitor
2022-07-11T19:18:26+01:00
Running ./ep_engine_benchmarks
Run on (10 X 2400 MHz CPU s)
CPU Caches:
  L1 Data 64 KiB (x10)
  L1 Instruction 128 KiB (x10)
  L2 Unified 4096 KiB (x5)
Load Average: 8.33, 9.41, 5.51
------------------------------------------------------------------------------------------------
Benchmark                                                      Time             CPU   Iterations
------------------------------------------------------------------------------------------------
PagingVisitorBench/SingleVBucket/10/threads:1               10.2 ms         10.2 ms           68
PagingVisitorBench/SingleVBucket/128/threads:1               168 ms          168 ms            4
PagingVisitorBench/SingleVBucket/256/threads:1               345 ms          345 ms            2
PagingVisitorBench/PagerIteration/10/threads:1              2.96 ms         2.96 ms          237
PagingVisitorBench/PagerIteration/128/threads:1             51.8 ms         51.8 ms           10
PagingVisitorBench/PagerIteration/256/threads:1              107 ms          107 ms            6
PagingVisitorBench/EvictAllWithoutPager/10/threads:1        5.18 ms         5.18 ms          126
PagingVisitorBench/EvictAllWithoutPager/128/threads:1       92.9 ms         92.9 ms            7
PagingVisitorBench/EvictAllWithoutPager/256/threads:1        198 ms          198 ms            3

real	5m13.622s
user	5m6.544s
sys	0m4.831s

Change-Id: I7c6d43f04c3af9765f5c044a24e21cb7fb46c52d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-07-11 18:43:41.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-11 19:01:21.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47772/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kv_bucket.cc(508): error C3861: "createAndScheduleItemFreqDecayerTask": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47772/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18949/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:508:5: error: use of undeclared identifier "createAndScheduleItemFreqDecayerTask"; did you mean "createAndScheduleDefragmenterTask"? [clang-diagnostic-error]
    createAndScheduleItemFreqDecayerTask();
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    createAndScheduleDefragmenterTask
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.h:604:10: note: "createAndScheduleDefragmenterTask" declared here
    void createAndScheduleDefragmenterTask();
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18949/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:508:5:
error: use of undeclared identifier "createAndScheduleItemFreqDecayerTask"; did you mean "createAndScheduleDefragmenterTask"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18949/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40129/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:508:5:
error: use of undeclared identifier "createAndScheduleItemFreqDecayerTask"; did you mean "createAndScheduleDefragmenterTask"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40129/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8634/ : FAILURE

Compile error at [2022-07-11T18:45:27.982Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kv_bucket.cc:508:5:
error: use of undeclared identifier "createAndScheduleItemFreqDecayerTask"; did you mean "createAndScheduleDefragmenterTask"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8634/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21900/ : FAILURE

Compile error at [2022-07-11T18:44:56.859Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kv_bucket.cc:508:5:
error: use of undeclared identifier "createAndScheduleItemFreqDecayerTask"; did you mean "createAndScheduleDefragmenterTask"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21900/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20095/ : FAILURE

Compile error at [2022-07-11T18:48:01.470Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kv_bucket.cc:508:5:
error: use of undeclared identifier "createAndScheduleItemFreqDecayerTask"; did you mean "createAndScheduleDefragmenterTask"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20095/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20852/ : FAILURE

Compile error at [2022-07-11T18:46:06.235Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:508:5:
error: ?createAndScheduleItemFreqDecayerTask? was not declared in this scope; did you mean ?createAndScheduleDefragmenterTask??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20852/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21210/ : FAILURE

Compile error at [2022-07-11T18:46:10.465Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kv_bucket.cc:508:5:
error: ?createAndScheduleItemFreqDecayerTask? was not declared in this scope; did you mean ?createAndScheduleDefragmenterTask??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21210/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29249/ : FAILURE

Compile error at [2022-07-11T18:46:49.844Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kv_bucket.cc:508:5:
error: use of undeclared identifier "createAndScheduleItemFreqDecayerTask"; did you mean "createAndScheduleDefragmenterTask"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29249/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8731/ : FAILURE

Compile error at [2022-07-11T18:45:46.731Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kv_bucket.cc:508:5:
error: ?createAndScheduleItemFreqDecayerTask? was not declared in this scope; did you mean ?createAndScheduleDefragmenterTask??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8731/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18105/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
